templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magento-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: custandstitch.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magento
                port:
                  number: 80
